test data refactoring