@@ -17,65 +17,71 @@ import java.util.List;
 
 public class TestData {
 
-  public static RowingSession session1 =
-      RowingSession.builder()
-          .day("MONDAY")
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.WATER)
-          .level(RowerLevel.INTERMEDIATE)
-          .squad(Squad.WOMENS)
-          .build();
+  public class StandardSessions {
+    public static RowingSession session1 =
+            RowingSession.builder()
+                    .day("MONDAY")
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.WATER)
+                    .level(RowerLevel.INTERMEDIATE)
+                    .squad(Squad.WOMENS)
+                    .build();
 
-  public static RowingSession session2 =
-      RowingSession.builder()
-          .day("MONDAY")
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.WATER)
-          .level(RowerLevel.NOVICE)
-          .squad(Squad.WOMENS)
-          .build();
+    public static RowingSession session2 =
+            RowingSession.builder()
+                    .day("MONDAY")
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.WATER)
+                    .level(RowerLevel.NOVICE)
+                    .squad(Squad.WOMENS)
+                    .build();
 
-  public static RowingSession session4 =
-      RowingSession.builder()
-          .day("MONDAY")
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.WATER)
-          .level(RowerLevel.NOVICE)
-          .squad(Squad.MENS)
-          .build();
+    public static RowingSession session4 =
+            RowingSession.builder()
+                    .day("MONDAY")
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.WATER)
+                    .level(RowerLevel.NOVICE)
+                    .squad(Squad.MENS)
+                    .build();
 
-  public static RowingSession session3 =
-      RowingSession.builder()
-          .day("MONDAY")
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.ERG)
-          .level(RowerLevel.DEVELOPMENT)
-          .squad(Squad.DEVELOPMENT)
-          .build();
+    public static RowingSession session3 =
+            RowingSession.builder()
+                    .day("MONDAY")
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.ERG)
+                    .level(RowerLevel.DEVELOPMENT)
+                    .squad(Squad.DEVELOPMENT)
+                    .build();
 
-  public static RowingSessions session1And2 =
-      RowingSessions.builder()
-          .day(Weekday.MONDAY)
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.WATER)
-          .levels(List.of(RowerLevel.NOVICE, RowerLevel.INTERMEDIATE))
-          .squads(Squad.WOMENS)
-          .build();
+    public static RowingSessions session1And2 =
+            RowingSessions.builder()
+                    .day(Weekday.MONDAY)
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.WATER)
+                    .levels(List.of(RowerLevel.NOVICE, RowerLevel.INTERMEDIATE))
+                    .squads(Squad.WOMENS)
+                    .build();
 
-  public static RowingSessions session3s =
-      RowingSessions.builder()
-          .day(Weekday.MONDAY)
-          .startTime("18:00:00")
-          .endTime("20:00:00")
-          .sessionType(SessionType.ERG)
-          .levels(List.of(RowerLevel.DEVELOPMENT))
-          .squads(Squad.DEVELOPMENT)
-          .build();
+    public static RowingSessions session3s =
+            RowingSessions.builder()
+                    .day(Weekday.MONDAY)
+                    .startTime("18:00:00")
+                    .endTime("20:00:00")
+                    .sessionType(SessionType.ERG)
+                    .levels(List.of(RowerLevel.DEVELOPMENT))
+                    .squads(Squad.DEVELOPMENT)
+                    .build();
+    public static List<RowingSession> sessions = Arrays.asList(session1, session2, session3);
+    public static List<RowingSession> sameSessionsMenWomen = Arrays.asList(session2, session4);
+    public static List<RowingSessions> groupedSessions = Arrays.asList(session1And2, session3s);
+  }
+
 
   // Create sample data
   public static UpcomingAvailabilityDTO upcomingSession1 =
@@ -112,9 +118,7 @@ public class TestData {
 
 
 
-  public static List<RowingSession> sessions = Arrays.asList(session1, session2, session3);
-  public static List<RowingSession> sameSessionsMenWomen = Arrays.asList(session2, session4);
-  public static List<RowingSessions> groupedSessions = Arrays.asList(session1And2, session3s);
+
 
   public static String formattedDate = "Mon Nov 11 2024 00:00";
 
